--- a/css/index.css
+++ b/css/index.css
@@ -2965,6 +2965,7 @@ h1.page-title + .tag-cloud-list {
   display: block;
   margin: 4px 0;
   padding: 1px 6px;
+  border-radius: 16px;
   color: var(--toc-link-color);
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -3559,6 +3560,7 @@ h1.page-title + .tag-cloud-list {
 }
 #page h1.page-title {
   margin: 8px 0 20px;
+  text-align: center;
 }
 #post > #post-info {
   margin-bottom: 30px;
@@ -3850,7 +3852,10 @@ h1.page-title + .tag-cloud-list {
 }
 #pagination .prev-post,
 #pagination .next-post {
-  width: 50%;
+  overflow: hidden;
+  width: 48%;
+  border-radius: 8px;
+  background: #000;
 }
 @media screen and (max-width: 768px) {
   #pagination .prev-post,
@@ -3870,7 +3875,6 @@ h1.page-title + .tag-cloud-list {
   margin-top: 40px;
   width: 100%;
   border-radius: 8px;
-  background: #000;
 }
 .layout > .recent-posts .pagination > * {
   display: inline-block;
@@ -3997,6 +4001,7 @@ h1.page-title + .tag-cloud-list {
   position: relative;
   margin: 40px 0 10px;
   padding: 10px 16px;
+  border-radius: 8px;
   border: 1px solid var(--light-grey);
   -webkit-transition: box-shadow 0.3s ease-in-out;
   -moz-transition: box-shadow 0.3s ease-in-out;
